--- a/client/books/NewBook.html
+++ b/client/books/NewBook.html
@@ -1,5 +1,6 @@
 <template name="NewBook">
     <div class="new-book-container">
+      <i class="fa fa-close"></i>
       {{> quickForm collection="Books" id="insertBookForm" type="insert"
     class ="new-book-insert-form"}}
     </div>
