--- a/client/books/Book.html
+++ b/client/books/Book.html
@@ -3,7 +3,10 @@
       <h3>{{title}}</h3>
       <h4>{{author}}</h4>
       <a href="/book/{{_id}}">View Details</a>
-      <button class="btn-primar toggle-menu">Edit</button>
+      <i class="fa fa-pencil"></i>
+      <i class="fa fa-trash"></i>
+      {{#if editMode}}
       {{> quickForm collection="Books" id=updateBookId type="update" doc=this autosave=true}}
+      {{/if}}
     </article>
 </template>
