Xu ly xong Roles va hien thi Users

--- a/client/books/Books.html
+++ b/client/books/Books.html
@@ -3,7 +3,7 @@
   {{#if $.Session.get 'newBook'}}
       {{> NewBook}}
   {{else}}
-      <button class="new-book">New Book</button>
+      <button class="new-btn">New Book</button>
   {{/if}}
 
   <section class="books">
